Added TD_Colors.java for better Color Configuration